# x86-to-6502

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  c++.local.properties  clang_format.sh  make_file.sh  readme.md
godbolt/: godbolt_make.sh
libca/: CMakeLists.txt
libca/include/ca/: asm_line.h  cross_assembler.h  i386.h  i386_register.h  instruction_operand.h  intel_386.h  intel_386_register.h  target.h
libca/src/: cross_assembler.cpp  i386.cpp  intel_386.cpp  logger.cpp  logger.h  target.cpp
libca/tests/: CMakeLists.txt
libca/tests/test_libca/: test_parse_x86_asm_line.cpp
libx86-to-6502/: CMakeLists.txt
libx86-to-6502/include/x86-to-6502/: i386.h  mos6502.h
libx86-to-6502/src/: i386.cpp  mos6502.cpp
libx86-to-6502/tests/: CMakeLists.txt
libx86-to-6502/tests/test_libx86-to-6502/: test_parse_x86_asm_line.cpp
src/: asm_line.h  i386.cpp  i386.h  instruction_operand.h  main.cpp  mos6502.cpp  mos6502.h  operand.h
targets/: CMakeLists.txt
targets/mos6502/: CMakeLists.txt
targets/mos6502/include/mos6502/: mos6502_instruction.h  mos6502_target.h
targets/mos6502/src/: bitwise_instructions.cpp  branch_instructions.cpp  math_instructions.cpp  misc_instructions.cpp  mos6502_instruction.cpp  mos6502_target.cpp  move_instructions.cpp  opcodes.h
x86-to-6502/: CMakeLists.txt
x86-to-6502/src/: main.cpp
